# virtualbarcamp

./: .gitignore  .gitlab-ci.yml  .graphqlconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  init.sh  manage.py  nginx.conf  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
docs/: design.md
infrastructure/: .terraform.lock.hcl  app.tf  db.tf  loadbalancer.tf  main.tf  queue.tf  versions.tf
virtualbarcamp/: asgi.py  celery.py  discord.py  dummy_test.py  routing.py  settings.py  urls.py  webpack.py  wsgi.py
virtualbarcamp/accounts/: __init__.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
virtualbarcamp/accounts/browser/: index.ts  styles.scss
virtualbarcamp/accounts/migrations/: 0001_initial.py
virtualbarcamp/bot/: __init__.py  __main__.py  bot.py
virtualbarcamp/browser/: App.tsx  Countdown.tsx  DiscordInviteModal.tsx  DoorsOpenLanding.tsx  Grid.tsx  GridOpenLanding.tsx  InviteToDiscordButton.tsx  PostEventLanding.tsx  PreEventLanding.tsx  SpeakersControl.tsx  Talk.tsx  csrf.ts  index.tsx  styles.scss
virtualbarcamp/browser/__tests__/: index.ts
virtualbarcamp/browser/graphql/: addTalk.ts  availableSpeakers.ts  customScalars.d.ts  globalSettings.ts  globalSettingsUpdated.ts  globalTypes.ts  grid.ts  inviteToDiscord.ts  isOnDiscord.ts  moveTalk.ts  removeTalk.ts  slotChanged.ts  updateTalk.ts
virtualbarcamp/graphql/: schema.py  testutils.py  urls.py  views.py
virtualbarcamp/graphql/mutations/: discord.py  grid.py  test_discord.py  test_grid.py
virtualbarcamp/graphql/queries/: discord.py  grid.py  (+1 more)
virtualbarcamp/grid/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py
virtualbarcamp/home/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py  views.py
virtualbarcamp/templates/: base.html  form_field.html
(+18 files in other folders)
