[tool.poetry]
name = "virtualbarcamp"
version = "0.1.0"
description = "A system for hosting online multi-track unconferences"
authors = ["Chris Northwood <chris@barcampmanchester.co.uk>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
django = {extras = ["argon2"], version = "^3.0.6"}
django-csp = "^3.6"
django-widget-tweaks = "^1.4.8"
psycopg2-binary = "^2.8.5"
requests = "^2.23.0"
social-auth-app-django = "^3.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
pytest-django = "^3.8.0"
pytest-testmon = "^1.0.2"
pytest-watch = "^4.2.0"
pywatchman = "^1.4.1"

[tool.black]
line-length = 100
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
