[tool.poetry]
name = "virtualbarcamp"
version = "0.1.0"
description = "A system for hosting online multi-track unconferences"
authors = ["Chris Northwood <chris@barcampmanchester.co.uk>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^4.4.2"}
channels = "^2.4.0"
daphne = "^2.5.0"
django = {extras = ["argon2"], version = "^3.0.6"}
django-celery-beat = "^2.0.0"
django-celery-results = "^1.2.1"
django-csp = "^3.6"
graphene-django = "^2.10.1"
graphene-subscriptions = "^1.0.2"
psycopg2-binary = "^2.8.5"
requests = "^2.23.0"
social-auth-app-django = "^3.4.0"
channels-redis = "^2.4.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
pytest-django = "^3.8.0"
pytest-mock = "^3.1.1"
pytest-testmon = "^1.0.2"
pytest-watch = "^4.2.0"
pywatchman = "^1.4.1"

[tool.black]
line-length = 100
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
